Fix charts alignment

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -15,7 +15,6 @@
   .card-div {
     margin-top: 15px;
     width: 90vw;
-    height: 100%;
     box-sizing: border-box;
     -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.15);
     -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.15);
@@ -154,7 +153,7 @@
   }
 
   .statistic_table {
-    width: 1500px;
+    width: 100%;
     height: 300px;
     font-size: 14pt;
     margin: 20px;
